--- a/es6-learning/package.json
+++ b/es6-learning/package.json
@@ -15,6 +15,7 @@
     "babel-register": "^6.24.1",
     "connect-livereload": "^0.6.0",
     "del": "^3.0.0",
+    "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
