--- a/es6-learning/package.json
+++ b/es6-learning/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "connect-livereload": "^0.6.0",
